force-app/main/default/objects/WelcomeCall_Script__c/WelcomeCall_Script__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Scripting For Call Line ( Welcome Call )</description>
    <label>Script</label>
</CustomObject>