force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Content_Answer__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Content_Answer__c</fullName>
    <label>Content Answer</label>
    <type>TextArea</type>
</CustomField>