force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Content_Question_2__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Content_Question_2__c</fullName>
    <label>Content Question 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>