force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Content_Question__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Content_Question__c</fullName>
    <label>Content Question</label>
    <type>TextArea</type>
</CustomField>