force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Fg_Note__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Note</label>
    <type>Checkbox</type>
</CustomField>