force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Fg_Survey__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Survey</label>
    <type>Checkbox</type>
</CustomField>