force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_fgLegalStatement__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_fgLegalStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fg Legal Statement</label>
    <type>Checkbox</type>
</CustomField>