force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Group_Type__c</fullName>
    <label>Group Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>