force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_GroupOrder__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_GroupOrder__c</fullName>
    <description>Untuk mengurutkan data dari group type
Misal Group Type : Radio Button


Policy Holder is Available                  1
Policy Holder Give Other Number     2
Policy Holder is not Available at This Time  3
Cancel the Policy  4</description>
    <label>GroupOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>