force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_ImageAnswer_c__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_ImageAnswer_c__c</fullName>
    <description>Image for answer, for now using for image at Section Kepuasan Pelanggan Tab &quot; Sesi Pertanyaan&quot;</description>
    <label>Image Answer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>