force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_ImageContent_c__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_ImageContent_c__c</fullName>
    <description>Using as Image Content, example for product MKS when answer no at question number 1 system will showing Premi Table</description>
    <label>Image Content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>