force-app/main/default/objects/WelcomeCall_Script__c/fields/welcomeCall_Lookup_Label_2__c.field-meta.xml
<CustomField>
    <fullName>welcomeCall_Lookup_Label_2__c</fullName>
    <label>Lookup Label 2</label>
    <type>TextArea</type>
</CustomField>