force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Lookup_Label__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Lookup_Label__c</fullName>
    <label>Lookup Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>