force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Order__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Order__c</fullName>
    <label>Order</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>