force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Parent__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Parent__c</fullName>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>