force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Parent_Dependency__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Parent_Dependency__c</fullName>
    <description>Digunakan untuk dependecy picklist</description>
    <label>Parent Dependency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>