force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Section__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Section__c</fullName>
    <label>Section</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>