force-app/main/default/objects/WelcomeCall_Script__c/fields/WelcomeCall_Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Tab_Name__c</fullName>
    <label>Tab Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>