force-app/main/default/objects/WelcomeCall_Script__c/listViews/Tab_Verifikasi_Data.listView-meta.xml
<ListView>
    <fullName>Tab_Verifikasi_Data</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Tab_Name__c</columns>
    <columns>WelcomeCall_Order__c</columns>
    <columns>WelcomeCall_Parent__c</columns>
    <columns>WelcomeCall_Section__c</columns>
    <columns>WelcomeCall_Product_Name__c</columns>
    <columns>WelcomeCall_Content_Question__c</columns>
    <columns>WelcomeCall_Content_Question_2__c</columns>
    <columns>WelcomeCall_Lookup_Label__c</columns>
    <columns>welcomeCall_Lookup_Label_2__c</columns>
    <columns>WelcomeCall_Type__c</columns>
    <columns>WelcomeCall_Content_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WelcomeCall_Tab_Name__c</field>
        <operation>equals</operation>
        <value>Verifikasi Data</value>
    </filters>
    <label>Tab Verifikasi Data</label>
    <language>en_US</language>
</ListView>